# Tracker-of-habits

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requiremenents.txt  requirements.txt
alembic/: env.py
alembic/versions/: 1ae1f855b93c_first.py  ad677839e1a1_initial.py
app/database/: database.py  database_config.py
app/model/: trackerModel.py
app/router/: tracker_router.py
app/schemas/: trackerSchemas.py
app/service/: service.py
src/app/database/: database.py  database_config.py
src/app/model/: trackerModel.py
src/app/router/: tracker_router.py
src/app/schemas/: trackerSchemas.py
