[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tracker"
version = "0.1.0"
description = ""
authors = ["Zyryanow Artem <"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "==0.118.0"
uvicorn = "==0.24.0"
pydantic = "==2.11.9"
typing-inspection = "==0.4.1"
sqlalchemy = "==2.0.20"
python-dotenv = "^1.1.1"
asyncpg = "^0.30.0"